--- a/style/style.css
+++ b/style/style.css
@@ -1,7 +1,6 @@
 /* shared styles */
 .title{
     color: rgb(13, 19, 33);
-font-family: Azeret Mono;
 font-size: 32px;
 font-weight: 800;
 line-height: 37px;
@@ -10,7 +9,6 @@ text-align: center;
 }
 .subtitle{
     color: rgb(13, 19, 33);
-font-family: Azeret Mono;
 font-size: 16px;
 font-weight: 400;
 line-height: 26px;
@@ -26,36 +24,40 @@ div{
 
 .thumb{
     background-image: url("/images/Hero-bg.png");
-
-   
+    background-size: cover;
+    background-position: center;
 }
-.thumb-pic{
-  display: flex
+
+.thumb-container{
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
    align-items: center;
+   margin: 0px 220px;
+}
+.thumb-describtion{
+    
+   
+   
 }
 .thumb-title{
     color: rgb(13, 19, 33);
-font-family: Azeret Mono;
 font-size: 48px;
 font-weight: 800;
-line-height: 68px;
-letter-spacing: 0%;
 text-align: center;
+margin-bottom: 24px;
 }
 .thumb-subtitle{
     color: rgb(13, 19, 33);
-font-family: Azeret Mono;
 font-size: 16px;
 font-weight: 400;
-line-height: 26px;
-letter-spacing: 0%;
 text-align: center;
 opacity: 0.7;
+margin-bottom: 24px;
 
 }
 .thumb-btn{
     color: rgb(255, 255, 255);
-font-family: Azeret Mono;
 font-size: 20px;
 font-weight: 600;
 line-height: 23px;
@@ -65,6 +67,7 @@ text-align: center;
     background: rgb(13, 19, 33);
     padding: 21px 24px 21px 24px;
     border: none;
+    margin-bottom: 44px;
 
 }
 
@@ -83,7 +86,6 @@ text-align: center;
 }
 .ans-title{
     color: rgba(13, 19, 33, 0.7);
-    font-family: Azeret Mono;
     font-size: 24px;
     font-weight: 700;
     line-height: 36px;
@@ -92,7 +94,6 @@ text-align: center;
 }
 .ans-subtitle{
     color: rgb(13, 19, 33);
-font-family: Azeret Mono;
 font-size: 16px;
 font-weight: 400;
 line-height: 26px;
@@ -103,7 +104,6 @@ opacity: 0.7;
 .ans-btn{
     
     color: rgb(13, 19, 33);
-font-family: Azeret Mono;
 font-size: 20px;
 font-weight: 600;
 line-height: 23px;
@@ -163,6 +163,8 @@ padding: 12px 20px 12px 20px;
 /* support styles */
 .support{
     background-image: url("/images/handshake.jpg");
+    background-size: cover;
+    background-position: center;
    padding: 64px 48px;
    display: flex;
    flex-direction: column;
@@ -196,7 +198,6 @@ padding: 19px 20px 19px 20px;
 .footer-title{
     margin-top: 25px;
     color: rgb(13, 19, 33);
-font-family: Azeret Mono;
 font-size: 20px;
 font-weight: 600;
 text-align: center;
