--- a/style/style.css
+++ b/style/style.css
@@ -27,17 +27,22 @@ div{
     background-size: cover;
     background-position: center;
 }
-
 .thumb-container{
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-   align-items: center;
-   margin: 0px 220px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    padding: 0 220px;
+
+
+  
 }
+
 .thumb-describtion{
     
-   
+  gap: 24px;
+  margin: 0px 220px;
+  
    
 }
 .thumb-title{
@@ -83,6 +88,7 @@ text-align: center;
     margin-bottom: 32px;
     display: flex;
     justify-content: center;
+    background-color: rgb(228, 224, 220);
 }
 .ans-title{
     color: rgba(13, 19, 33, 0.7);
@@ -104,6 +110,7 @@ opacity: 0.7;
 .ans-btn{
     
     color: rgb(13, 19, 33);
+    background-color: aliceblue;
 font-size: 20px;
 font-weight: 600;
 line-height: 23px;
@@ -117,6 +124,8 @@ padding: 12px 20px 12px 20px;
 
 /* ispiration style */
 
+
+
 .ispiration{
     gap: 48px;
     padding: 0px 144px;
@@ -125,12 +134,9 @@ padding: 12px 20px 12px 20px;
 .yt{
     display: flex;
     justify-content: center;
-    border-bottom: 20px;
+    padding: 32px;
+    border:1px solid rgb(184, 182, 182); 
     border-radius: 16px;
-    box-sizing: border-box;
-    border: 1px solid rgba(13, 19, 33, 0.2);
-    border-radius: 16px;
-    
 }
 
 /* target style */
