--- a/style/style.css
+++ b/style/style.css
@@ -174,10 +174,10 @@ margin: 150px;
 }
 .target-heading{
     margin: 48px;
-    gap: 48px;
+    /* gap: 48px; */
 }
 .tar-subtitle{
-    margin: 0 480px;
+    margin: 0 150px;
 }
 .target-content{
     display: flex;
@@ -192,7 +192,7 @@ margin: 150px;
     font-weight: bold;
 }
 .target-content h1, p,a{
-    margin: 24px 250px 24px 0;
+    margin: 24px 150px 24px 0;
 }
 .target-content p{
     opacity: .7;
@@ -221,6 +221,7 @@ margin: 150px;
     background-image: url("/images/handshake.jpg");
     background-size: cover;
     background-position: center;
+    height:max-content;
     padding: 64px 48px;
     margin: 150px;
    font-family: Azeret Mono;
@@ -278,15 +279,16 @@ width: 548px;
 .footer-content{
  background-color: rgba(102, 100, 100, 0.315);
  display: flex;
-  justify-content: space-between;
-  align-items: center;
+  justify-content: center;
+  align-items:center;
   padding: 32px 150px ;
 }
 .footer-icons{
     list-style: none;
     display: flex;
-    gap: 24px;
-    align-items:baseline ;
+    gap: 0px;
+    align-items: center ;
+    justify-items: end;
 }
 .footer-title{
     color: rgb(13, 19, 33);
