--- a/style/style.css
+++ b/style/style.css
@@ -41,17 +41,16 @@ div{
     align-items: center;
     padding: 26px 220px;
     gap: 32px;
-
-
-  
 }
 
 .thumb-describtion{
     
-  gap: 24px;
-  margin: 0px 220px;
-  
-   
+  /* gap: 24px; */
+  margin: 22px ;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+
 }
 .thumb-title{
     color: rgb(13, 19, 33);
@@ -66,7 +65,7 @@ font-size: 16px;
 font-weight: 400;
 text-align: center;
 opacity: 0.7;
-margin-bottom: 24px;
+margin: 24px;
 
 }
 .thumb-btn{
@@ -221,7 +220,9 @@ margin: 150px;
     background-image: url("/images/handshake.jpg");
     background-size: cover;
     background-position: center;
-    height:max-content;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     padding: 64px 48px;
     margin: 150px;
    font-family: Azeret Mono;
@@ -272,23 +273,21 @@ width: 548px;
 }
 
 /* footer design */
-.footer{
-    margin-top: 150px;
+
+.footer-contain{
+    display: flex;
+    gap: 250px;
+    padding: 26px;
     font-family: Azeret Mono;
-}
-.footer-content{
- background-color: rgba(102, 100, 100, 0.315);
- display: flex;
-  justify-content: center;
-  align-items:center;
-  padding: 32px 150px ;
+    justify-content: space-around;
+    align-items:center;
+    background-color: rgba(102, 100, 100, 0.315);
 }
 .footer-icons{
-    list-style: none;
     display: flex;
-    gap: 0px;
-    align-items: center ;
-    justify-items: end;
+    justify-content: flex-end;
+    
+   
 }
 .footer-title{
     color: rgb(13, 19, 33);
