--- a/style/style.css
+++ b/style/style.css
@@ -70,18 +70,17 @@ margin: 24px;
 }
 .thumb-btn{
     color: rgb(255, 255, 255);
-font-size: 20px;
-font-weight: 600;
-line-height: 23px;
-letter-spacing: 0%;
-text-align: center;
+    font-size: 20px;
+    font-weight: 600;
+    text-decoration: none;
+    display: flex;
+    text-align: center;
     border-radius: 8px;
     background: rgb(13, 19, 33);
     padding: 21px 24px 21px 24px;
     border: none;
     margin-bottom: 44px;
-
-}
+} 
 
 /* QUESTION STYLE  */
 
