--- a/style/style.css
+++ b/style/style.css
@@ -72,7 +72,7 @@ margin: 24px;
     color: rgb(255, 255, 255);
     font-size: 20px;
     font-weight: 600;
-    text-decoration: none;
+    /* text-decoration: none; */
     display: flex;
     text-align: center;
     border-radius: 8px;
